Update create_virtualmachine_with_subnet_in_different_resource_group.yml for Azure Pipelines

--- a/create_virtualmachine_with_subnet_in_different_resource_group.yml
+++ b/create_virtualmachine_with_subnet_in_different_resource_group.yml
@@ -8,7 +8,7 @@
   hosts: localhost
   connection: local
   vars:
-    resource_group: "{{ resource_group_name }}"
+    resource_group: "{{ myresourcegroup }}"
     resource_group_secondary: createvmsubnetin2ndrg2
     vm_name: testvm
     location: eastus
